--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="/Styles/mainStyles.css"></script>
+    <link rel="stylesheet" href="/Styles/mainStyles.css">
 </head>
-
 <body>
-
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="nvabar-header">
@@ -30,8 +28,6 @@
           <li><a href="https://www.facebook.com/austin.hunterxvi" target="_blank">Social</a></li>
           <li><a href="src/Contact.html" target="_blank">Contact</a></li>
           <li><a href="https://agile-wave-45393.herokuapp.com" target="_blank">Family Connections (Beta)</a></li>
-
-
         </ul>
     </div>
   </div>
