--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title style="background-color:LightGray;">Austin Hunter</title>
+    <title>Austin Hunter</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/Styles/mainStyles.css">
+  <link rel="stylesheet" href="mainStyles.css">
 </head>
 <body>
   <nav class="navbar navbar-inverse">
@@ -26,12 +26,12 @@
           <li><a href="https://github.com/AustinWalkerHunter" target="_blank">GitHub</a></li>
           <li><a href="https://www.linkedin.com/in/austin-hunter-182105b3/" target="_blank">LinkedIn</a></li>
           <li><a href="https://www.facebook.com/austin.hunterxvi" target="_blank">Social</a></li>
-          <li><a href="src/Contact.html" target="_blank">Contact</a></li>
-          <li><a href="https://agile-wave-45393.herokuapp.com" target="_blank">Family Connections (Beta)</a></li>
+          <!--<li><a href="src/Contact.html" target="_blank">Contact</a></li>-->
+          <li class="pull-left"><a href="https://agile-wave-45393.herokuapp.com" target="_blank">Family Connections(Beta)</a></li>
         </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
   <div class="bg-1">
     <div class="container-fluid text-center">
       <h1>Austin Hunter</h1>
@@ -39,19 +39,17 @@
           <p> Welcome to my Personal Portfolio! <br><br></p>
     </div>
   </div>
-
-    <div class="container-fluid bg-2 text-center" margin: 0;>
-      <div class="container-fluid text-center">
-        <h2 style="font-size:150%;">About Me<br></h2>
-      </div>
-      <p> My name is Austin Hunter. I'm a 3rd year student at Boise State University pursuing a degree in Computer
-          Science! My dream is to find a job with a company
-          that has a great culture and share my passion for technology. <br> <br> </p>
-      </div>
-
-    <div class="container-fluid bg-3 text-center" margin: 0;>
-      <h3 style="font-size:150%;"> 3 Things I Enjoy </h3>
-      <div class="row">
+  <div class="container-fluid bg-2 text-center" margin: 0;>
+    <div class="container-fluid text-center">
+      <h2 style="font-size:150%;">About Me<br></h2>
+    </div>
+    <p> My name is Austin Hunter. I'm a 3rd year student at Boise State University pursuing a degree in Computer
+        Science! My dream is to find a job with a company
+        that has a great culture and share my passion for technology. <br> <br> </p>
+  </div>
+  <div class="container-fluid bg-3 text-center">
+    <h3 style="font-size:150%;"> 3 Things I Enjoy </h3>
+    <div class="row">
       <div class="col-sm-4">
         <p>Rock Climbing</p>
         <img src="Resources/Rock.jpg" style="width:400px;height:500px;">
@@ -66,13 +64,12 @@
         <p>Exploring the Mountains of Idaho</p>
         <img src="Resources/Mountain.JPG" style="width:400px;height:500px;">
           <p>Jump Creek Falls, ID</p>
-          </div>
-        </div>
-        <p> <br> </p>
+      </div>
     </div>
-
-
+    <p> <br> </p>
+  </div>
 </body>
+
 <footer>
   <div class="text-center">
     <p> <br><br> Made from scratch by Austin Hunter <br><br></p>
