--- a/src/Contact.html
+++ b/src/Contact.html
@@ -4,11 +4,11 @@
   <title style="background-color:black;">Contact Austin Hunter</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="style.css" type="text/css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="../mainStyles.css">
 </head>
-<body style="background-color:#3182bd">
+<body>
 
       <h2>Send e-mail to AustinHunter@u.boisestate.edu</h2>
 
