--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
-      <div class="nvabar-header">
+      <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -25,9 +25,9 @@
           <li><a href="src/Resume01.html" target="_blank">Resume</a></li>
           <li><a href="https://github.com/AustinWalkerHunter" target="_blank">GitHub</a></li>
           <li><a href="https://www.linkedin.com/in/austin-hunter-182105b3/" target="_blank">LinkedIn</a></li>
-          <li><a href="https://www.facebook.com/austin.hunterxvi" target="_blank">Social</a></li>
+          <!--<li><a href="https://www.facebook.com/austin.hunterxvi" target="_blank">Social</a></li>-->
           <!--<li><a href="src/Contact.html" target="_blank">Contact</a></li>-->
-          <li class="pull-left"><a href="https://agile-wave-45393.herokuapp.com" target="_blank">Family Connections(Beta)</a></li>
+          <li><a href="https://agile-wave-45393.herokuapp.com" target="_blank">Family Connections(Beta)</a></li>
         </ul>
       </div>
     </div>
@@ -39,7 +39,7 @@
           <p> Welcome to my Personal Portfolio! <br><br></p>
     </div>
   </div>
-  <div class="container-fluid bg-2 text-center" margin: 0;>
+  <div class="container-fluid bg-2 text-center">
     <div class="container-fluid text-center">
       <h2 style="font-size:150%;">About Me<br></h2>
     </div>
@@ -52,17 +52,17 @@
     <div class="row">
       <div class="col-sm-4">
         <p>Rock Climbing</p>
-        <img src="Resources/Rock.jpg" style="width:400px;height:500px;">
+        <img src="Resources/Rock.jpg" class="pic">
         <p>Black Cliffs, ID</p>
       </div>
       <div class="col-sm-4">
         <p>Quiet Games of Chess</p>
-        <img src="Resources/Chess.gif" style="width:400px;height:500px;">
+        <img src="Resources/Chess.gif" class="pic">
           <p>King's Gambit</p>
       </div>
       <div class="col-sm-4">
         <p>Exploring the Mountains of Idaho</p>
-        <img src="Resources/Mountain.JPG" style="width:400px;height:500px;">
+        <img src="Resources/Mountain.JPG" class="pic">
           <p>Jump Creek Falls, ID</p>
       </div>
     </div>
