--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
           <li><a href="src/Resume01.html" target="_blank">Resume</a></li>
           <li><a href="https://github.com/AustinWalkerHunter" target="_blank">GitHub</a></li>
           <li><a href="https://www.linkedin.com/in/austin-hunter-182105b3/" target="_blank">LinkedIn</a></li>
-          <!--<li><a href="https://www.facebook.com/austin.hunterxvi" target="_blank">Social</a></li>-->
+          <li><a href="https://www.facebook.com/austin.hunterxvi" target="_blank">Social</a></li>
           <!--<li><a href="src/Contact.html" target="_blank">Contact</a></li>-->
-          <li><a href="https://agile-wave-45393.herokuapp.com" target="_blank">Family Connections(Beta)</a></li>
         </ul>
+        <div class="fam navbar"> <a href="https://agile-wave-45393.herokuapp.com" target="_blank">Family Connections(Beta)</a></li>
+        </div>
       </div>
     </div>
   </nav>
