Added live chess and updated styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="mainStyles.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/mainStyles.css">
 </head>
 <body>
   <nav class="navbar navbar-inverse">
@@ -25,10 +25,9 @@
           <li><a href="src/Resume01.html" target="_blank">Resume</a></li>
           <li><a href="https://github.com/AustinWalkerHunter" target="_blank">GitHub</a></li>
           <li><a href="https://www.linkedin.com/in/austin-hunter-182105b3/" target="_blank">LinkedIn</a></li>
-          <li><a href="https://www.facebook.com/austin.hunterxvi" target="_blank">Social</a></li>
+          <li><a href="https://agile-wave-45393.herokuapp.com" target="_blank">Family Connections(Beta)</a></li>
           <!--<li><a href="src/Contact.html" target="_blank">Contact</a></li>-->
         </ul>
-        <div class="fam navbar"> <a href="https://agile-wave-45393.herokuapp.com" target="_blank">Family Connections(Beta)</a></li>
         </div>
       </div>
     </div>
@@ -36,7 +35,7 @@
   <div class="bg-1">
     <div class="container-fluid text-center">
       <h1>Austin Hunter</h1>
-        <img src="Resources/Professional_Head_Shot.jpg" class="img-responsive img-circle" style="display:inline" width="350" height="350">
+        <img src="resources/Professional_Head_Shot.jpg" class="img-responsive img-circle" style="display:inline" width="350" height="350">
           <p> Welcome to my Personal Portfolio! <br><br></p>
     </div>
   </div>
@@ -53,17 +52,18 @@
     <div class="row">
       <div class="col-sm-4">
         <p>Rock Climbing</p>
-        <img src="Resources/Rock.jpg" class="pic">
+        <img src="resources/Rock.jpg" class="pic">
         <p>Black Cliffs, ID</p>
       </div>
       <div class="col-sm-4">
-        <p>Quiet Games of Chess</p>
-        <img src="Resources/Chess.gif" class="pic">
-          <p>King's Gambit</p>
+          <p>Quiet Games of Chess</p>
+        <!--<img src="resources/Chess.gif" class="pic">-->
+            <script class="pic" src="https://lichess.org/tv/embed?w=400&h=400"></script>
+              <p>Live feed</p>
       </div>
       <div class="col-sm-4">
         <p>Exploring the Mountains of Idaho</p>
-        <img src="Resources/Mountain.JPG" class="pic">
+        <img src="resources/Mountain.JPG" class="pic">
           <p>Jump Creek Falls, ID</p>
       </div>
     </div>
@@ -73,7 +73,8 @@
 
 <footer>
   <div class="text-center">
-    <p> <br><br> Made from scratch by Austin Hunter <br><br></p>
+    <p> <br> Made from scratch by Austin Hunter <br></p>
   </div>
 </footer>
+
 </html>
