--- a/src/Resume01.html
+++ b/src/Resume01.html
@@ -18,7 +18,7 @@
 <body style="background-color: #000000c7;">
 <div style="position:absolute;left:50%;margin-left:-306px;top:0px;width:612px;height:792px;border-style:outset;overflow:hidden">
     <div style="position:absolute;left:0px;top:0px">
-        <img src="../Resources/background2.jpg" width=612 height=792></div>
+        <img src="../resources/background2.jpg" width=612 height=792></div>
     <div style="position:absolute;left:239.13px;top:64.62px" class="cls_004"><span class="cls_004">Austin Hunter</span></div>
     <div style="position:absolute;left:222.24px;top:82.64px" class="cls_006"><span class="cls_006">Boise, ID | (916) 934-8934</span></div>
     <div style="position:absolute;left:138.25px;top:98.85px" class="cls_006"><span class="cls_006">AustinHunter@u.boisestate.edu | </span><A HREF="https://austinwalkerhunter.github.io/">https://austinwalkerhunter.github.io/</A> </span></div>
@@ -29,7 +29,7 @@
     <div style="position:absolute;left:113.48px;top:163.70px" class="cls_003"><span class="cls_003">●</span><span class="cls_006">  Developed and maintained user interfaces for websites and web applications</span></div>
     <div style="position:absolute;left:113.48px;top:175.86px" class="cls_003"><span class="cls_003">●</span><span class="cls_006">  Interacted with RESTful APIs and formats (JSON, XML)</span></div>
     <div style="position:absolute;left:113.48px;top:188.02px" class="cls_003"><span class="cls_003">●</span><span class="cls_006">  Designed and developed responsive design websites</span></div>
-    <div style="position:absolute;left:113.48px;top:200.18px" class="cls_003"><span class="cls_003">●</span><span class="cls_006">  Practiced Agile and Scrum in 2 week sprints with 10 other developers</span></div>
+    <div style="position:absolute;left:113.48px;top:200.18px" class="cls_003"><span class="cls_003">●</span><span class="cls_006">  Practiced Agile and Scrum in 2 week sprints with 5 other developers</span></div>
     <div style="position:absolute;left:97.27px;top:232.60px" class="cls_009"><span class="cls_009">Climbing Gym Manager</span></div>
     <div style="position:absolute;left:383.89px;top:232.60px" class="cls_006"><span class="cls_006">May 2017 - January 2018</span></div>
     <div style="position:absolute;left:97.27px;top:248.81px" class="cls_006"><span class="cls_006">Boise State Outdoor Program</span></div>
