--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="col-sm-4">
         <p>Rock Climbing</p>
         <img src="resources/Rock.jpg" class="pic">
-        <p>Black Cliffs, ID</p>
+        <p>Black Cliffs</p>
       </div>
       <div class="col-sm-4">
           <p>Quiet Games of Chess</p>
@@ -62,9 +62,9 @@
               <p>Live feed</p>
       </div>
       <div class="col-sm-4">
-        <p>Exploring the Mountains of Idaho</p>
+        <p>Exploring</p>
         <img src="resources/Mountain.JPG" class="pic">
-          <p>Jump Creek Falls, ID</p>
+          <p>Idaho</p>
       </div>
     </div>
     <p> <br> </p>
