--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <p>Black Cliffs</p>
       </div>
       <div class="col-sm-4">
-          <p>Quiet Games of Chess</p>
+          <p>Quick Games of Chess</p>
         <!--<img src="resources/Chess.gif" class="pic">-->
             <script class="pic" src="https://lichess.org/tv/embed?w=400&h=400"></script>
               <p>Live feed</p>
