--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="resources/css/common.css">
     <link rel="stylesheet" type="text/css" href="resources/css/mainStyles.css">
+
 </head>
 <body>
   <nav class="navbar navbar-inverse">
@@ -25,7 +27,8 @@
           <li><a href="src/Resume01.html" target="_blank">Resume</a></li>
           <li><a href="https://github.com/AustinWalkerHunter" target="_blank">GitHub</a></li>
           <li><a href="https://www.linkedin.com/in/austin-hunter-182105b3/" target="_blank">LinkedIn</a></li>
-          <li><a href="https://agile-wave-45393.herokuapp.com" target="_blank">Family Connections(Beta)</a></li>
+          <li><a href="https://agile-wave-45393.herokuapp.com" target="_blank">Beta_Website</a></li>
+          <li><a href="http://firebasenotificationsnodejs.simplesite.com/442211471" target="_blank">Push_Notif_Tutorial</a></li>
           <!--<li><a href="src/Contact.html" target="_blank">Contact</a></li>-->
         </ul>
         </div>
@@ -43,9 +46,8 @@
     <div class="container-fluid text-center">
       <h2 style="font-size:150%;">About Me<br></h2>
     </div>
-    <p> My name is Austin Hunter. I'm a 3rd year student at Boise State University pursuing a degree in Computer
-        Science! My dream is to find a job with a company
-        that has a great culture and share my passion for technology. <br> <br> </p>
+    <p> My name is Austin Hunter. I'm a senior at Boise State University pursuing a degree in Computer
+      Science! Thanks for visiting my first website, have a swell day!<br> <br> </p>
   </div>
   <div class="container-fluid bg-3 text-center">
     <h3 style="font-size:150%;"> 3 Things I Enjoy </h3>
