Adding Google Analytics

--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="resources/css/common.css">
-    <link rel="stylesheet" type="text/css" href="resources/css/mainStyles.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139880987-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
+        gtag('config', 'UA-139880987-1');
+    </script>
+
+  <link rel="stylesheet" type="text/css" href="resources/css/common.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/mainStyles.css">
 </head>
 <body>
   <nav class="navbar navbar-inverse">
@@ -31,7 +40,6 @@
           <li><a href="http://firebasenotificationsnodejs.simplesite.com/442211471" target="_blank">Push_Notif_Tutorial</a></li>
           <!--<li><a href="src/Contact.html" target="_blank">Contact</a></li>-->
         </ul>
-        </div>
       </div>
     </div>
   </nav>
