Added more links

--- a/index.html
+++ b/index.html
@@ -36,8 +36,19 @@
           <li><a href="src/Resume01.html" target="_blank">Resume</a></li>
           <li><a href="https://github.com/AustinWalkerHunter" target="_blank">GitHub</a></li>
           <li><a href="https://www.linkedin.com/in/austin-hunter-182105b3/" target="_blank">LinkedIn</a></li>
-          <li><a href="https://agile-wave-45393.herokuapp.com" target="_blank">Beta_Website</a></li>
-          <li><a href="http://firebasenotificationsnodejs.simplesite.com/442211471" target="_blank">Push_Notif_Tutorial</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Side Projects
+            </a>
+            <div class="dropdown-menu">
+              <a class="bottomSpace" href="https://agile-wave-45393.herokuapp.com" target="_blank">Family Website</a><br>
+              <a href="http://firebasenotificationsnodejs.simplesite.com/442211471" target="_blank">Push Tutorial</a><br>
+              <a href="https://austinwalkerhunter.github.io/JavaScript_Introduction/" target="_blank">JavaScript Intro</a>
+
+            </div>
+          </li>
+          <!--<li><a href="https://agile-wave-45393.herokuapp.com" target="_blank">Beta_Website</a></li>-->
+          <!--<li><a href="http://firebasenotificationsnodejs.simplesite.com/442211471" target="_blank">Push_Notif_Tutorial</a></li>-->
           <!--<li><a href="src/Contact.html" target="_blank">Contact</a></li>-->
         </ul>
       </div>
