--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
               Side Projects
             </a>
             <div class="dropdown-menu">
-              <a class="bottomSpace" href="https://agile-wave-45393.herokuapp.com" target="_blank">Family Website</a><br>
-              <a href="http://firebasenotificationsnodejs.simplesite.com/442211471" target="_blank">Push Tutorial</a><br>
+              <a class="bottomSpace" href="https://agile-wave-45393.herokuapp.com" target="_blank">Family Website</a>
+              <hr>
+              <a href="http://firebasenotificationsnodejs.simplesite.com/442211471" target="_blank">Push Tutorial</a>
+              <hr>
               <a href="https://austinwalkerhunter.github.io/JavaScript_Introduction/" target="_blank">JavaScript Intro</a>
-
+              <hr class="hr">
             </div>
           </li>
           <!--<li><a href="https://agile-wave-45393.herokuapp.com" target="_blank">Beta_Website</a></li>-->
