--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="shortcut icon" type="image/png" href="favicon-16x16.png"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -49,16 +50,13 @@
               <hr class="hr">
             </div>
           </li>
-          <!--<li><a href="https://agile-wave-45393.herokuapp.com" target="_blank">Beta_Website</a></li>-->
-          <!--<li><a href="http://firebasenotificationsnodejs.simplesite.com/442211471" target="_blank">Push_Notif_Tutorial</a></li>-->
-          <!--<li><a href="src/Contact.html" target="_blank">Contact</a></li>-->
-        </ul>
+          </ul>
       </div>
     </div>
   </nav>
   <div class="bg-1">
     <div class="container-fluid text-center">
-      <h1>Austin Hunter</h1>
+      <h1 class="name">Austin Hunter</h1>
         <img src="resources/Professional_Head_Shot.jpg" class="img-responsive img-circle" style="display:inline" width="350" height="350">
           <p> Welcome to my Personal Portfolio! <br><br></p>
     </div>
