--- a/index.html
+++ b/index.html
@@ -33,26 +33,11 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li>
-            <a class="navText" href="resources/AustinHunter_Resume.pdf" target="_blank">Resume</a>
-          </li>
+          <li><a class="navText" href="resources/AustinHunter_Resume.pdf" target="_blank">Resume</a></li>
           <li><a class="navText" href="https://github.com/AustinWalkerHunter" target="_blank">GitHub</a></li>
           <li><a class="navText" href="https://www.linkedin.com/in/austin-hunter-182105b3/" target="_blank">LinkedIn</a></li>
-          <li><a class="navText" href="https://apps.apple.com/ca/app/summit-stats/id1643467168?platform=iphone" target="_blank">SummitStats</a></li>
-          <!-- <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Side Projects
-            </a>
-            <div class="dropdown-menu">
-              <a class="bottomSpace" href="https://agile-wave-45393.herokuapp.com" target="_blank">Family Website</a>
-              <hr>
-              <a href="http://firebasenotificationsnodejs.simplesite.com/442211471" target="_blank">Push Tutorial</a>
-              <hr>
-              <a href="https://austinwalkerhunter.github.io/JavaScript_Introduction/" target="_blank">JavaScript Intro</a>
-              <hr class="hr">
-            </div>
-          </li> -->
-          </ul>
+          <li><a class="navText summitStatsNav" href="https://apps.apple.com/ca/app/summit-stats/id1643467168?platform=iphone" target="_blank">SummitStats</a></li>
+        </ul>
       </div>
     </div>
   </nav>
@@ -61,8 +46,8 @@
         <div class="col-sm-7 header-content">
           <h1 class="header-title TBspace">Hey, I’m Austin - A Software
             Engineer from Boise.</h1>
-          <p class="aboutMe-content">I've developed features for thousands with Paylocity and designed & developed my own IOS app Summit Stats. I'm an outdoor enthusiest who's always on a search for a new challenge.</p>
-          <div class="aboutMe-email"><a  href = "mailto: ahunter916@gmail.com">ahunter916@gmail.com</a></div>
+          <p class="aboutMe-content">I've developed features for thousands with Paylocity and designed & developed my own IOS app <span ><a class="summitStats" href="https://apps.apple.com/ca/app/summit-stats/id1643467168?platform=iphone" target="_blank">SummitStats</a></li></span>. I'm an outdoor enthusiest who's always on the search for a new challenge.</p>
+          <div class="aboutMe-email"><a class="aboutMe-email-text" href = "mailto: ahunter916@gmail.com">ahunter916@gmail.com</a></div>
         </div>
         <div class="col-sm-5 profilePic-container">
             <img src="resources/profilePic.jpg" class="img-responsive profilePic">
@@ -76,7 +61,7 @@
         <h3 class="enjoy bottom_space"><a id="contentWord" onclick="showHiddenContent()">3 Things I Enjoy</a></h3>
         <div class="col-sm-4">
           <p class="smallBotSpace">Rock Climbing</p>
-          <img src="resources/Rock.jpg" class="pic">
+          <img  class="activityImage" src="resources/Rock.jpg" >
           <p class="bottom_space">Black Cliffs, ID</p>
         </div>
         <div class="col-sm-4" id="chess">
@@ -86,8 +71,8 @@
         </div>
         <div class="col-sm-4">
           <p class="smallBotSpace">Skiing in the Mountains</p>
-          <img src="resources/skiing.png" class="picWider">
-            <p class="bottom_space">Snowbowl, AZ</p>
+          <img class="activityImage" src="resources/skiing.png">
+          <p class="bottom_space">Snowbowl, AZ</p>
         </div>
       </div>
       <div id="hiddenContent">
