--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
   <div class="container-fluid">
   <div class="header row">
         <div class="col-sm-7 header-content">
-          <h1 class="header-title TBspace">Hey, I’m Austin - A Software
-            Engineer from Boise.</h1>
-          <p class="aboutMe-content">I've developed features for thousands with Paylocity and designed & developed my own IOS app <span ><a class="summitStats" href="https://apps.apple.com/ca/app/summit-stats/id1643467168?platform=iphone" target="_blank">SummitStats</a></li></span>. I'm an outdoor enthusiest who's always on the search for a new challenge.</p>
+          <h1 class="header-title TBspace">Hey, I’m <span class="austin">Austin</span> - A Software Engineer from Boise.</h1>
+          <p class="aboutMe-content">I develop intuitive features daily for thousands of users on the performance management team at <span><a class="paylocity" href="https://www.paylocity.com/" target="_blank">Paylocity</a></li></span>. I've designed & developed my own IOS app <span><a class="summitStats" href="https://apps.apple.com/ca/app/summit-stats/id1643467168?platform=iphone" target="_blank">SummitStats</a></li></span> to share my days skiing on the mountain with friends and family. I'm an outdoor enthusiest who's always on the search for a new challenge.</p>
           <div class="aboutMe-email"><a class="aboutMe-email-text" href = "mailto: ahunter916@gmail.com">ahunter916@gmail.com</a></div>
         </div>
         <div class="col-sm-5 profilePic-container">
@@ -60,17 +59,17 @@
       <div id="normalView">
         <h3 class="enjoy bottom_space"><a id="contentWord" onclick="showHiddenContent()">3 Things I Enjoy</a></h3>
         <div class="col-sm-4">
-          <p class="smallBotSpace">Rock Climbing</p>
+          <p class="smallBotSpace">Climbing on the sharp end</p>
           <img  class="activityImage" src="resources/Rock.jpg" >
           <p class="bottom_space">Black Cliffs, ID</p>
         </div>
         <div class="col-sm-4" id="chess">
-          <p class="smallBotSpace">Quick Games of Chess</p>
-          <iframe src="https://lichess.org/tv/frame?theme=brown&bg=light" style="width: 300px; height: 330px;" allowtransparency="true" frameborder="0"></iframe>
+          <p class="smallBotSpace">Quick games of Chess</p>
+          <iframe src="https://lichess.org/tv/frame?theme=brown&bg=light" style="width: 290px; height: 320px;" allowtransparency="true" frameborder="0"></iframe>
           <p class="bottom_space"><span class="live-text">LIVE</span> from <a href="https://lichess.org/tv">lichess.org</a></p>
         </div>
         <div class="col-sm-4">
-          <p class="smallBotSpace">Skiing in the Mountains</p>
+          <p class="smallBotSpace">'S' turns on the mountain</p>
           <img class="activityImage" src="resources/skiing.png">
           <p class="bottom_space">Snowbowl, AZ</p>
         </div>
