--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div class="header row">
         <div class="col-sm-7 header-content">
           <h1 class="header-title TBspace">Hey, I’m <span class="austin">Austin</span> - A Software Engineer from Boise.</h1>
-          <p class="aboutMe-content">I develop intuitive features daily for thousands of users on the performance management team at <span><a class="paylocity" href="https://www.paylocity.com/" target="_blank">Paylocity</a></li></span>. I've designed & developed my own IOS app <span><a class="summitStats" href="https://apps.apple.com/ca/app/summit-stats/id1643467168?platform=iphone" target="_blank">SummitStats</a></li></span> to share my days skiing on the mountain with friends and family. I'm an outdoor enthusiest who's always on the search for a new challenge.</p>
+          <p class="aboutMe-content">I develop intuitive features for thousands of users on the performance management team at <span><a class="paylocity" href="https://www.paylocity.com/" target="_blank">Paylocity</a></li></span>. I've designed & developed my own IOS app <span><a class="summitStats" href="https://apps.apple.com/ca/app/summit-stats/id1643467168?platform=iphone" target="_blank">SummitStats</a></li></span> to share my days skiing on the mountain with friends and family. I'm an outdoor enthusiest who's always on the search for a new challenge.</p>
           <div class="aboutMe-email"><a class="aboutMe-email-text" href = "mailto: ahunter916@gmail.com">ahunter916@gmail.com</a></div>
         </div>
         <div class="col-sm-5 profilePic-container">
